--- a/Bind/Src/ModuloDetallePrograma.fx.yaml
+++ b/Bind/Src/ModuloDetallePrograma.fx.yaml
@@ -1,4 +1,4 @@
-Screen1 As screen:
+ModuloDetallePrograma As screen:
 
     Container5 As groupContainer.manualLayoutContainer:
         BorderColor: =RGBA(106, 122, 127, 1)
@@ -1300,7 +1300,7 @@ Screen1 As screen:
             Y: =74
             ZIndex: =65
 
-    DataTable2 As dataTable.datatable:
+    DT_ListaIniciativas As dataTable.datatable:
         BorderColor: =RGBA(139, 154, 159, 1)
         BorderStyle: =BorderStyle.Solid
         BorderThickness: =1
@@ -1312,6 +1312,49 @@ Screen1 As screen:
         X: =874
         Y: =367
         ZIndex: =26
+
+        "'Nombre Producto/Proyecto_Columna4' As dataTableColumn.textualColumn":
+            AutoWidth: =false
+            DisplayMode: =DisplayMode.Edit
+            FieldDisplayName: ="Nombre Producto/Proyecto"
+            FieldName: ="Nombre_x0020_Producto_x002f_Proy"
+            FieldVariantName: ="textualColumn"
+            Height: =Parent.Height
+            LayoutHeight: =Parent.Height
+            Order: =1
+            Text: =ThisItem.'Nombre Producto/Proyecto'
+            Width: =413
+            X: =0
+            Y: =0
+            ZIndex: =66
+
+        Estado_Iniciativa_Columna4 As dataTableColumn.textualColumn:
+            DisplayMode: =DisplayMode.Edit
+            FieldDisplayName: ="Estado_Iniciativa"
+            FieldName: ="Estado_Iniciativa"
+            FieldVariantName: ="textualColumn"
+            Height: =Parent.Height
+            LayoutHeight: =Parent.Height
+            Order: =3
+            Text: =ThisItem.Estado_Iniciativa
+            Width: =100
+            X: =0
+            Y: =0
+            ZIndex: =67
+
+        FechaGolive_Columna4 As dataTableColumn.textualColumn:
+            DisplayMode: =DisplayMode.Edit
+            FieldDisplayName: ="FechaGolive"
+            FieldName: ="FechaGolive"
+            FieldVariantName: ="textualColumn"
+            Height: =Parent.Height
+            LayoutHeight: =Parent.Height
+            Order: =2
+            Text: =ThisItem.FechaGolive
+            Width: =100
+            X: =0
+            Y: =0
+            ZIndex: =68
 
     Gp_CabeceraPortafolio_22 As group:
         Height: =5
